# MPRPC

./: readme.md
example/: friend.pb.cc  user.pb.cc  user.pb.h
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpcprovider.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  rpcheader.pb.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
